tests/compile/non_surjective_missing_output.stderr
error[E0004]: non-exhaustive patterns: `Axis::Horizontal` not covered
  --> tests/compile/non_surjective_missing_output.rs:16:1
   |
16 | #[surject]
   | ^^^^^^^^^^ pattern `Axis::Horizontal` not covered
   |
note: `Axis` defined here
  --> tests/compile/non_surjective_missing_output.rs:11:6
   |
11 | enum Axis {
   |      ^^^^
12 |     Vertical,
13 |     Horizontal,
   |     ---------- not covered
   = note: the matched value is of type `Axis`
   = note: this error originates in the attribute macro `surject` (in Nightly builds, run with -Z macro-backtrace for more info)
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
16 ~ #[surject],
17 + Axis::Horizontal => todo!()
   |
